<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/dark_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quizResultView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/resultIcon"
            android:layout_width="192dp"
            android:layout_height="192dp"
            app:layout_constraintBottom_toTopOf="@id/resultTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/ic_quiz_result_success" />

        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/grid_step_8"
            android:layout_marginTop="@dimen/grid_step_2"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/resultSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultIcon"
            tools:text="@string/quiz_result_success_title"
            tools:textColor="@color/green" />

        <TextView
            android:id="@+id/resultSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/grid_step_8"
            android:layout_marginTop="@dimen/grid_step_2"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultTitle"
            tools:text="@string/quiz_result_success_subtitle"
            tools:textColor="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            style="@style/Light.Button.FillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/grid_step_4"
            android:text="@string/quiz_result_next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevButton"
            style="@style/Light.Button.FillButton.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/grid_step_4"
            android:text="@string/quiz_result_prev_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_marginTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_step_4">

            <TextView
                android:id="@+id/progressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/quiz_progress_title_not_started" />

            <ProgressBar
                android:id="@+id/progressProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginTop="@dimen/grid_step_2"
                android:progressDrawable="@drawable/background_quiz_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressTitle"
                tools:max="100"
                tools:progress="42" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/grid_step_4"
            android:layout_marginTop="@dimen/grid_step_6"
            android:layout_marginBottom="@dimen/grid_step_4"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/questionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/quizRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/grid_step_3"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/submitButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="7"
                    tools:listitem="@layout/item_quiz_player_variant" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitButton"
                    style="@style/Light.Button.FillButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/grid_step_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:background="@color/green"
                    tools:text="@string/quiz_question_submit_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/grid_step_4"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/quizSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/quiz_preview_title" />

                <TextView
                    android:id="@+id/quizTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/grid_step_1"
                    android:gravity="center"
                    android:textColor="@color/dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Тест на знание видов женской одежды и их сочетания" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startButton"
                    style="@style/Light.Button.FillButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/grid_step_4"
                    android:text="@string/quiz_preview_start_button"
                    tools:background="@color/green" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>
